--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!-- Custom fonts for this template-->
     <link
-      href="\assets\vendor\fontawesome-free\css\all.min.css"
+      href="/assets/vendor/fontawesome-free/css/all.min.css"
       rel="stylesheet"
       type="text/css"
     />
@@ -19,7 +19,7 @@
     />
 
     <!-- Custom styles for this template-->
-    <link href="\assets\css\sb-admin-2.min.css" rel="stylesheet" />
+    <link href="/assets/css/sb-admin-2.min.css" rel="stylesheet" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -46,14 +46,14 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script src="\assets\vendor\jquery\jquery.min.js"></script>
-    <script src="\assets\vendor\bootstrap\js\bootstrap.bundle.min.js"></script>
+    <script src="/assets/vendor/jquery/jquery.min.js"></script>
+    <script src="/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
     <!-- Core plugin JavaScript-->
-    <script src="\assets\vendor\jquery-easing\jquery.easing.min.js"></script>
+    <script src="/assets/vendor/jquery-easing/jquery.easing.min.js"></script>
 
     <!-- Custom scripts for all pages -->
-    <script src="\assets\js\sb-admin-2.min.js"></script>
+    <script src="/assets/js/sb-admin-2.min.js"></script>
 
     <!-- Page level plugins -->
     <!-- <script src="\assets\vendor\chart.js\Chart.min.js"></script> -->
